--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveForeignIncludedPolicyPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveForeignIncludedPolicyPanel.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.ResolveForeignIncludedPolicyPanel">
-  <grid id="46377" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="46377" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="21" y="9" width="852" height="458"/>
+      <xy x="21" y="9" width="541" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -42,6 +42,11 @@
           </component>
         </children>
       </grid>
+      <vspacer id="e2453">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
