--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SchemaValidationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SchemaValidationPropertiesDialog.form
@@ -360,7 +360,7 @@
       <grid id="3371e" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none" title=""/>
@@ -380,7 +380,7 @@
               </nested-form>
             </children>
           </grid>
-          <grid id="e10cd" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="e10cd" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -390,7 +390,7 @@
             <children>
               <component id="bd5b3" class="javax.swing.JRadioButton" binding="rbApplyToBody">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text resource-bundle="com/l7tech/console/resources/SchemaValidationPropertiesDialog" key="appliesTo.body.label"/>
@@ -398,17 +398,28 @@
               </component>
               <component id="34971" class="javax.swing.JRadioButton" binding="rbApplyToArgs">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text resource-bundle="com/l7tech/console/resources/SchemaValidationPropertiesDialog" key="appliesTo.args.label"/>
                 </properties>
               </component>
-              <vspacer id="8fdca">
+              <component id="f9f46" class="javax.swing.JRadioButton" binding="rbApplyToEnvelope">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
-              </vspacer>
+                <properties>
+                  <text resource-bundle="com/l7tech/console/resources/SchemaValidationPropertiesDialog" key="appliesTo.envelope.label"/>
+                </properties>
+              </component>
+              <component id="3f279" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text resource-bundle="com/l7tech/console/resources/SchemaValidationPropertiesDialog" key="appliesTo.nonsoap.label"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="6e3ef" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -452,6 +463,7 @@
     <group name="buttonGroup">
       <member id="bd5b3"/>
       <member id="34971"/>
+      <member id="f9f46"/>
     </group>
   </buttonGroups>
 </form>
