--- a/modules/gateway/assertions/templates/ivy.xml
+++ b/modules/gateway/assertions/templates/ivy.xml
@@ -29,7 +29,7 @@
                     conf="optional; test->default,test"/>
         <dependency name="layer7-gateway-console" rev="latest.integration" force="true" conf="optional"/>
         <dependency org="com.intellij" name="forms_rt" rev="9.0.1" force="true" conf="optional"/>
-        <dependency org="org.springframework" name="spring-test" rev="2.5.6" force="true" conf="test"/>
+        <dependency org="org.springframework" name="spring-test" rev="3.0.2.RELEASE" force="true" conf="test"/>
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
 
         <exclude org="asm" module="asm" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
