SSG-4031: Changed text in product drop-down for ESM from "Layer 7 Enterprise Manager" to "Layer 7 Enterprise Service Manager" to match the product name specified in EsmMain.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26306 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/internal/src/main/java/com/l7tech/internal/license/gui/resources/LicenseSpecPanel.form
+++ b/modules/internal/src/main/java/com/l7tech/internal/license/gui/resources/LicenseSpecPanel.form
@@ -528,7 +528,7 @@
           <editable value="true"/>
           <model>
             <item value="Layer 7 SecureSpan Suite"/>
-            <item value="Layer 7 Enterprise Manager"/>
+            <item value="Layer 7 Enterprise Service Manager"/>
           </model>
         </properties>
       </component>
