--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XslTransformationFetchPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XslTransformationFetchPanel.form
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.XslTransformationFetchPanel">
-  <grid id="bccb3" binding="mainPanel" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="bccb3" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="16" y="62" width="560" height="300"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0"/>
+      <xy x="16" y="62" width="608" height="300"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="3ead9" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="3ead9" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="485" y="53" width="75" height="155"/>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
           <component id="59983" class="javax.swing.JButton" binding="addButton">
             <constraints>
-              <xy x="10" y="0" width="55" height="25"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchAddRegexButton.text"/>
@@ -30,8 +27,7 @@
           </component>
           <component id="71760" class="javax.swing.JButton" binding="editButton">
             <constraints>
-              <xy x="10" y="30" width="55" height="25"/>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchEditRegexButton.text"/>
@@ -40,8 +36,7 @@
           </component>
           <component id="fc709" class="javax.swing.JButton" binding="removeButton">
             <constraints>
-              <xy x="0" y="60" width="75" height="25"/>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchRemoveRegexButton.text"/>
@@ -50,16 +45,14 @@
           </component>
           <vspacer id="f1513">
             <constraints>
-              <xy x="32" y="85" width="11" height="70"/>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
         </children>
       </grid>
       <scrollpane id="2330f" binding="scrollPane">
         <constraints>
-          <xy x="227" y="53" width="248" height="155"/>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3">
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="140"/>
             <maximum-size width="-1" height="300"/>
           </grid>
@@ -75,40 +68,35 @@
       </scrollpane>
       <vspacer id="c662f">
         <constraints>
-          <xy x="345" y="235" width="11" height="65"/>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="b1ada" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b1ada" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="6" left="6" bottom="0" right="0"/>
         <constraints>
-          <xy x="0" y="53" width="217" height="155"/>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="6e018" class="javax.swing.JLabel">
+          <component id="6e018" class="javax.swing.JLabel" binding="regexInfoLabel">
             <constraints>
-              <xy x="12" y="6" width="205" height="28"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="5" fill="0"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchRegexList.label"/>
+              <text value=""/>
             </properties>
           </component>
           <vspacer id="2ef9c">
             <constraints>
-              <xy x="106" y="39" width="11" height="20"/>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="12"/>
               </grid>
             </constraints>
           </vspacer>
           <component id="ec8a8" class="javax.swing.JLabel">
             <constraints>
-              <xy x="6" y="59" width="211" height="76"/>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchRegexList.examples.label"/>
@@ -116,36 +104,32 @@
           </component>
           <vspacer id="2ee49">
             <constraints>
-              <xy x="106" y="135" width="11" height="20"/>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2">
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <maximum-size width="-1" height="200"/>
               </grid>
             </constraints>
           </vspacer>
         </children>
       </grid>
-      <component id="42b9d" class="javax.swing.JLabel">
+      <component id="42b9d" class="javax.swing.JLabel" binding="regexDescriptionLabel">
         <constraints>
-          <xy x="0" y="0" width="386" height="28"/>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchRegexList.description"/>
+          <text value=""/>
         </properties>
       </component>
-      <component id="d51bf" class="javax.swing.JCheckBox" binding="allowWithoutStylesheetCheckbox">
+      <component id="d51bf" class="javax.swing.JCheckBox" binding="noUrlFoundCheckBox">
         <constraints>
-          <xy x="227" y="213" width="248" height="22"/>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0"/>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchAllowNoDeclarationCheckbox.text"/>
+          <text value=""/>
         </properties>
       </component>
       <vspacer id="f022b">
         <constraints>
-          <xy x="345" y="33" width="11" height="20"/>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <minimum-size width="-1" height="12"/>
           </grid>
         </constraints>
