--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XslTransformationSpecifyUrlPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XslTransformationSpecifyUrlPanel.form
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.XslTransformationSpecifyUrlPanel">
-  <grid id="d47a2" binding="mainPanel" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="d47a2" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="88" y="92" width="409" height="122"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+      <xy x="88" y="92" width="470" height="122"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="37d0" class="javax.swing.JLabel">
+      <component id="37d0" class="javax.swing.JLabel" binding="fetchUrlDescription">
         <constraints>
-          <xy x="0" y="3" width="389" height="14"/>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchUrlTextBox.description"/>
+          <text value=""/>
         </properties>
       </component>
-      <component id="695dd" class="javax.swing.JLabel">
+      <component id="695dd" class="javax.swing.JLabel" binding="urlToMonitorLabel">
         <constraints>
-          <xy x="0" y="48" width="79" height="14"/>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="com/l7tech/console/resources/XslTransformationPropertiesDialog" key="fetchUrlTextBox.label"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="d116a" class="javax.swing.JTextField" binding="urlField">
         <constraints>
-          <xy x="89" y="45" width="225" height="20"/>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1">
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -38,20 +34,17 @@
       </component>
       <hspacer id="65b2a">
         <constraints>
-          <xy x="314" y="49" width="95" height="11"/>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="0" fill="1"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <vspacer id="3cee6">
         <constraints>
-          <xy x="196" y="65" width="11" height="57"/>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <vspacer id="7305d">
         <constraints>
-          <xy x="196" y="31" width="11" height="8"/>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <maximum-size width="-1" height="8"/>
           </grid>
         </constraints>
