--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
@@ -572,8 +572,8 @@
                     </constraints>
                     <properties>
                       <actionCommand value="Associate queue with published service (bypass resolution)"/>
-                      <label value="Associate port with single published service"/>
-                      <text value="Associate port &amp;with single published service"/>
+                      <label value="Associate port with published service (bypass resolution):"/>
+                      <text value="Associate port &amp;with published service (bypass resolution):"/>
                     </properties>
                   </component>
                   <component id="60d25" class="javax.swing.JComboBox" binding="serviceNameComboBox">
@@ -583,7 +583,9 @@
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <model/>
+                    </properties>
                   </component>
                   <component id="523fb" class="javax.swing.JComboBox" binding="contentTypeComboBox">
                     <constraints>
@@ -593,6 +595,7 @@
                     </constraints>
                     <properties>
                       <editable value="true"/>
+                      <model/>
                     </properties>
                   </component>
                 </children>
