--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AuditAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AuditAssertionDialog.form
@@ -3,7 +3,7 @@
   <grid id="ab21d" binding="mainPanel" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="24" y="37" width="424" height="230"/>
+      <xy x="24" y="37" width="452" height="231"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -115,7 +115,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Save request XML:"/>
+              <text value="Save request:"/>
             </properties>
           </component>
           <component id="92d2a" class="javax.swing.JLabel">
@@ -123,7 +123,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Save response XML:"/>
+              <text value="Save response:"/>
             </properties>
           </component>
           <component id="2dda0" class="javax.swing.JRadioButton" binding="saveRequestAlwaysButton">
