bug 8998: Fixed UI validation for JMS routing assertion's message destination; consistent now with HTTP routing assertion, displays a status label.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26559 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsRoutingAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsRoutingAssertionDialog.form
@@ -315,6 +315,14 @@
                   <text value=" Message Destination:"/>
                 </properties>
               </component>
+              <component id="7f3b9" class="javax.swing.JLabel" binding="messageDestinationStatusLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
             </children>
           </grid>
         </children>
