SSM-2761: Fix for Administrator should be able to remove the configured kerberos keytab
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26657 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/KerberosDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/KerberosDialog.form
@@ -3,12 +3,12 @@
   <grid id="46525" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
-      <xy x="117" y="118" width="516" height="334"/>
+      <xy x="117" y="118" width="657" height="334"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="ce77d" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ce77d" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -18,7 +18,7 @@
         <children>
           <hspacer id="e7bb">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="300" height="-1"/>
               </grid>
             </constraints>
@@ -31,12 +31,20 @@
               <text value="Load Keytab"/>
             </properties>
           </component>
-          <component id="65169" class="javax.swing.JButton" binding="okButton">
+          <component id="65169" class="javax.swing.JButton" binding="closeButton">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="OK"/>
+              <text value="Close"/>
+            </properties>
+          </component>
+          <component id="75427" class="javax.swing.JButton" binding="deleteKeytabButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Delete Keytab"/>
             </properties>
           </component>
         </children>
