--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
@@ -428,7 +428,7 @@
           <grid id="e44a4" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="12" left="12" bottom="12" right="12"/>
             <constraints>
-              <tabbedpane title="HTTP Settings"/>
+              <tabbedpane title="Pool Settings"/>
             </constraints>
             <properties/>
             <border type="none"/>
