bug 9101: Added support for use of context variables in the "target host" and "response content type" fields in the Raw TCP Routing properties dialog.
Changed server assertion to use a socket factory, and added unit test for raw TCP routing assertion that uses a custom socket factory to test the server assertion using mock sockets.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26696 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SimpleRawTransportAssertion/src/main/java/com/l7tech/external/assertions/rawtcp/console/SimpleRawTransportAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/SimpleRawTransportAssertion/src/main/java/com/l7tech/external/assertions/rawtcp/console/SimpleRawTransportAssertionPropertiesDialog.form
@@ -210,7 +210,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <toolTipText value="MIME Content-Type to assume for the response.  May include context variables."/>
+            </properties>
           </component>
         </children>
       </grid>
@@ -258,7 +260,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <toolTipText value="Target hostname of IP address.  May include context variables."/>
+            </properties>
           </component>
           <component id="4500d" class="javax.swing.JLabel">
             <constraints>
