SSG-4138: Added tooltip to GUI clarifying that a response limit of zero means "unlimited".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26701 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SimpleRawTransportAssertion/src/main/java/com/l7tech/external/assertions/rawtcp/console/SimpleRawTransportAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/SimpleRawTransportAssertion/src/main/java/com/l7tech/external/assertions/rawtcp/console/SimpleRawTransportAssertionPropertiesDialog.form
@@ -139,7 +139,9 @@
                     <preferred-size width="100" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <toolTipText value="Maximum number of response bytes to read from the remote server.  Zero means &quot;unlimited&quot;."/>
+                </properties>
               </component>
               <component id="db836" class="javax.swing.JLabel">
                 <constraints>
