SSG-3937: Fix for set variable assertion character encoding issue. We now show common content types in an (editable) drop down list with an encoding that will match the expected body encoding. A policy validation warning is now displayed if the encoding in the content type header does not match the encoding in the XML declaration (or the XML default encoding if there is no XML declaration)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26728 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SetVariableAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SetVariableAssertionDialog.form
@@ -108,18 +108,8 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <labelFor value="3378f"/>
+          <labelFor value="ba79d"/>
           <text value="&amp;Content-Type:"/>
-        </properties>
-      </component>
-      <component id="3378f" class="javax.swing.JTextField" binding="_contentTypeTextField">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <toolTipText value="Content-Type for Message type variable"/>
         </properties>
       </component>
       <component id="571d4" class="javax.swing.JLabel" binding="_contentTypeStatusLabel">
@@ -232,6 +222,14 @@
           </component>
         </children>
       </grid>
+      <component id="ba79d" class="javax.swing.JComboBox" binding="_contentTypeComboBox">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <editable value="true"/>
+        </properties>
+      </component>
     </children>
   </grid>
   <buttonGroups>
